--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -21,12 +21,18 @@
     
   ul&-icons
     margin-right -10px
+      
+    @media ( max-width: 380px )
+      margin-right -2px
     
     a
       padding 0 20px
       
       @media ( max-width: 600px )
         padding 0 10px
+      
+      @media ( max-width: 380px )
+        padding 0 2px
   
   a,
   a:hover,
