--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -92,15 +92,6 @@ nav ul .disabled a
 .center
   text-align center
   vertical-align middle
-  
-.btn,
-.btn-large
-  background-color #cc0033
-  
-  &:hover,
-  &:focus,
-  &:active
-    background-color #c00030 //function less
     
 .btn, .btn-large, .btn-flat
   border-radius( 5px )
@@ -551,3 +542,6 @@ select
   
 .z-depth-4, .modal
   box-shadow none
+  
+.side-nav a:hover
+  background-color rgba(0,0,0,0.1)
