--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -4,6 +4,17 @@
   margin-left -15px
   margin-right -15px
   background-color #fff
+  
+  @media ( max-width: 380px )
+  
+    >.visible-xs-block
+      padding-left 15px
+      padding-right 15px
+      
+    nav
+      margin-left -15px
+      margin-right -15px
+      width auto
 
   .tabs
     padding-left 0
@@ -54,6 +65,9 @@
   &__tab
     padding 15px
     display flex
+      
+    @media ( max-width: 380px )
+      //padding 0
     
     > div
       margin 0 auto
