--- a/source/layouts/includes/styles.jade
+++ b/source/layouts/includes/styles.jade
@@ -4,4 +4,5 @@ link( rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/
 link( href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" )
 
 link( rel="stylesheet", href="/template/template_styles.css" )
+link( rel="stylesheet", href="/template/colors.css" )
 link( href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,cyrillic' rel='stylesheet' )
