--- a/source/index.jade
+++ b/source/index.jade
@@ -11,7 +11,7 @@ block content
   include ./components/banner.111/template
   include ./components/banner.12/template
   
-  hr.i-unstyled.i-size-S
+  hr.i-unstyled
   
   include ./components/forms/template
   
@@ -23,7 +23,7 @@ block content
       p Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. 
       p Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.
       
-      hr
+      hr.i-size-XL
       
       .row
         .col-sm-6.center
