--- a/source/components/forms/style.styl
+++ b/source/components/forms/style.styl
@@ -15,6 +15,14 @@
       margin-left -15px
       margin-right -15px
       width auto
+      
+  &-menu
+    width 24px
+    height 24px
+    background embedurl( 'img/menu.png' ) no-repeat center center
+    
+    a.active &
+      background-image embedurl( 'img/menu-active.png' )
 
   .tabs
     padding-left 0
@@ -255,3 +263,28 @@
     ::-webkit-file-upload-button
       -webkit-appearance button
       font inherit
+      
+.modal.bottom-sheet
+  .modal-content
+    padding 0
+    
+  nav
+    height auto
+    line-height normal
+    
+    .b-forms &
+      @media ( max-width: 380px )
+        margin-right 0
+        margin-left 0
+        
+    .tabs
+      display block
+      height auto
+      line-height auto
+    
+      .tab
+        width 25%
+        min-width 80px
+        
+      .visible-xs-block .tab
+        width: 100%
