--- a/source/about/index.jade
+++ b/source/about/index.jade
@@ -15,6 +15,32 @@ block content
       p Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.
 
   hr.i-size-L
+
+  .row
+    .col-sm-8.col-sm-offset-2
+
+      .row
+        .col-sm-6
+          h2 Адрес
+          p 117036, Москва,<br>ул. Тверская, 356, <br>офис 110
+          
+        hr.visible-xs-block.i-unstyled
+          
+        .col-sm-6
+          h2 Контакты
+          p + 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)
+          p
+            a( href="mailto:info@traveller.ru" ) info@traveller.ru
+
+  hr.i-size-L.i-unstyled
+
+  .row.i-unstyled
+    .col-sm-8.col-sm-offset-2
+      h2 Схема проезда
+      
+  | <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+
+  hr.i-size-L.i-unstyled
   
   .row
     .col-sm-8.col-sm-offset-2
