Yandex map on the About page.

--- a/source/about/index.jade
+++ b/source/about/index.jade
@@ -38,7 +38,7 @@ block content
     .col-sm-8.col-sm-offset-2
       h2 Схема проезда
       
-  | <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+  | <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=false"></script>
 
   hr.i-size-L.i-unstyled
   
