--- a/source/styl/bootstrap-override.styl
+++ b/source/styl/bootstrap-override.styl
@@ -13,6 +13,9 @@ a
     margin-right -15px
     margin-left -15px
     margin-bottom 30px
+    
+    &.i-unstyled
+      margin-bottom 0
   
     &:last-child
       margin-bottom 0
