--- a/source/request/index.jade
+++ b/source/request/index.jade
@@ -7,10 +7,13 @@ block content
 
   hr.i-unstyled
 
-  .row
+  .row.i-unstyled
     .col-sm-8.col-sm-offset-2
     
       h1 Отправить запрос
+
+  .row
+    .col-sm-8.col-sm-offset-2
   
       p Отправьте запрос на интересующий вас тур и мы предложим вам оптимальный вариант путешествия.
 
