Single form heading

--- a/source/components/forms/single.jade
+++ b/source/components/forms/single.jade
@@ -4,6 +4,11 @@ link( rel="stylesheet", href="/components/forms/style.css" )
 script( src="/components/forms/script.js" )
 
 .b-forms
+
+  .row.i-unstyled
+    .col-sm-8.col-sm-offset-2
+      hr.i-unstyled
+      h2 Форма бронирования туров
           
   .b-forms__tab.hidden-xs
     div( style="width: 700px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
