--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -545,3 +545,19 @@ select
   
 .side-nav a:hover
   background-color rgba(0,0,0,0.1)
+  
+[id^="ymaps"]
+  input:not([type]),
+  input[type=text],
+  input[type=password],
+  input[type=email],
+  input[type=url],
+  input[type=time],
+  input[type=date],
+  input[type=datetime],
+  input[type=datetime-local],
+  input[type=tel],
+  input[type=number],
+  input[type=search],
+  textarea.materialize-textarea
+    margin-bottom 0
