Bitrix composite button

--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -85,7 +85,7 @@
 .b-footer
   background-color #fff
   padding-top 66px
-  padding-bottom 15px
+  padding-bottom 61px
   
   ul&-social
     
@@ -115,3 +115,7 @@
       
     .i-gp
       background-image embedurl( 'img/gp.png' )
+      
+.bx-composite-btn
+  right 50% !important
+  margin-right -93px !important
