he form component moved to modules

--- a/source/tours/index.jade
+++ b/source/tours/index.jade
@@ -22,7 +22,7 @@ block content
 
   hr.i-size-M.i-unstyled
   
-  include ../components/forms/template
+  include ../modules/forms/template
 
   hr.i-size-M.i-unstyled
 
