--- a/source/index.jade
+++ b/source/index.jade
@@ -13,7 +13,7 @@ block content
   
   hr.i-unstyled
   
-  include ./components/forms/template
+  include ./modules/forms/template
   
   hr.i-size-L
   
