Logo 70% for mobile devices.

--- a/source/styl/scaffolding.styl
+++ b/source/styl/scaffolding.styl
@@ -30,9 +30,6 @@
       
       @media ( max-width: 600px )
         padding 0 10px
-      
-      @media ( max-width: 380px )
-        padding 0 2px
   
   a,
   a:hover,
@@ -40,6 +37,13 @@
     text-decoration none
     color inherit
       
+  .brand-logo
+    
+    @media ( max-width: 570px )
+      img
+        width 70%
+        height auto
+  
 .side-nav
   a
     color #fff
