--- a/source/styl/materialize-override.styl
+++ b/source/styl/materialize-override.styl
@@ -5,6 +5,10 @@
 nav,nav .nav-wrapper i,nav a.button-collapse,nav a.button-collapse i
   height 100px
   line-height 100px
+  
+  @media (max-width: 570px)
+    height 70px
+    line-height 70px
 
 @media only screen and (min-width: 601px)
   nav,nav .nav-wrapper i,nav a.button-collapse,nav a.button-collapse i 
