Gaps on the site

--- a/source/index.jade
+++ b/source/index.jade
@@ -15,7 +15,7 @@ block content
   
   include ./modules/forms/template
   
-  hr.i-size-L
+  hr.i-size-L.i-unstyled
   
   .row
     .col-sm-8.col-sm-offset-2
