--- a/source/about/index.jade
+++ b/source/about/index.jade
@@ -102,6 +102,6 @@ block content
         li
           a( href="" target="_blank" rel="nofollow" ) Страхование ответственности
 
-  hr.i-unstyled
+  hr.i-size-M.i-unstyled
 
   
