Bitrix panel and the sideBar

--- a/source/components/forms.request/style.styl
+++ b/source/components/forms.request/style.styl
@@ -6,8 +6,8 @@
   background-color #fff
   
   > .row
-    margin-right 0
-    margin-left 0
+    margin-right 0 !important
+    margin-left 0 !important
   
   form .row
     margin-bottom 0
