--- a/source/index.jade
+++ b/source/index.jade
@@ -7,9 +7,9 @@ block content
 
   hr.i-unstyled
   
-  include ./components/banner.21/template
-  include ./components/banner.111/template
-  include ./components/banner.12/template
+  include ./components/announcement.21/template
+  include ./components/announcement.111/template
+  include ./components/announcement.12/template
   
   hr.i-unstyled
   
