--- a/source/modules/forms/template.jade
+++ b/source/modules/forms/template.jade
@@ -22,7 +22,7 @@
                 span.valign.b-forms-menu
             
       #form1.col-sm-12.b-forms__tab
-        div( style="width: 700px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
+        div( style="width: 100px; background-color: lightgreen;" ) form1
       
       #form2.col-sm-12.b-forms__tab
         div( style="width: 100px; background-color: lightgreen;" ) form2
@@ -31,7 +31,7 @@
         div( style="width: 500px; background-color: violet;" ) form3
         
       #form4.col-sm-12.b-forms__tab
-        div( style="width: 300px; background-color: lightblue;" ) form4
+        div( style="width: 700px; background-color: pink;" ) <script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script>
         
       #form9.col-sm-12.b-forms__tab
         div( style="width: 200px; background-color: pink;" ) form9
@@ -95,7 +95,7 @@
               a.valign-wrapper.modal-action.modal-close( href="#form10" )
                 span.valign.center Поиск горящих путевок
             li.tab
-              a.valign-wrapper.modal-action.modal-close( href="#form4" )
+              a.valign-wrapper.modal-action.modal-close( href="#form10" )
                 span.valign.center Бронирование автомобилей
             li.tab
               a.valign-wrapper.modal-action.modal-close( href="#form9" )
@@ -104,7 +104,7 @@
               a.valign-wrapper.modal-action.modal-close( href="#form10" )
                 span.valign.center Поиск круизов
             li.tab
-              a.valign-wrapper.modal-action.modal-close( href="#form4" )
+              a.valign-wrapper.modal-action.modal-close( href="#form10" )
                 span.valign.center Поиск горящих путевок
             li.tab
               a.valign-wrapper.modal-action.modal-close( href="#form9" )
