--- a/source/styl/template_styles.styl
+++ b/source/styl/template_styles.styl
@@ -6,7 +6,8 @@
 @import 'bootstrap-override.styl'
 @import 'gui.styl'
 @import 'scaffolding.styl'
-@import 'banner.styl'
+@import 'announcement.styl'
+@import 'tours.styl'
 @import 'forms.styl'
 
 @import 'colors.styl'
