--- a/source/tours/index.jade
+++ b/source/tours/index.jade
@@ -14,9 +14,9 @@ block content
   
       p Мы предлагаем вам забронировать туры по всему миру.
   
-  include ../components/banner.21/tour-card
-  include ../components/banner.12/tour-card
-  include ../components/banner.21/tour-card
+  include ../components/tours.21/template
+  include ../components/tours.12/template
+  include ../components/tours.21/template
 
   hr.i-unstyled
   
