--- a/markup/components/forms.request/style.css
+++ b/markup/components/forms.request/style.css
@@ -1,1 +1,1 @@
-.b-forms{margin-left:-15px;margin-right:-15px;background-color:#fff;}.b-forms > .row{margin-right:0;margin-left:0}.b-forms form .row{margin-bottom:0}
+.b-forms{margin-left:-15px;margin-right:-15px;background-color:#fff;}.b-forms > .row{margin-right:0 !important;margin-left:0 !important}.b-forms form .row{margin-bottom:0}
