--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -1,4 +1,5 @@
-﻿header.b-header
+﻿<div id="bx-panel" style="z-index: 995 !important;">BX Panel</div>
+header.b-header
   nav
     .container
       .nav-wrapper
