--- a/source/modules/forms/style.styl
+++ b/source/modules/forms/style.styl
@@ -74,11 +74,11 @@
     border-bottom 1px solid #f4f4f4
 
   &__tab
-    padding 15px
+    padding 15px 30px
     display flex
       
-    @media ( max-width: 380px )
-      //padding 0
+    @media ( max-width: 570px )
+      padding 15px
     
     > div
       margin 0 auto
