--- a/source/layouts/main.jade
+++ b/source/layouts/main.jade
@@ -11,6 +11,8 @@ html
   body
     include includes/header.jade
     
+    block banner
+    
     section.container
       block content
         h1 travellers
