--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -5,7 +5,8 @@ body
   font-weight 300
   font-family "Helvetica Neue",Helvetica,"Open Sans",Arial,sans-serif
   
-h1
+h1,
+.b-h1
   font-size 32pt
   line-height 1.14
   font-weight bold
