--- a/source/components/gallery-banner/style.styl
+++ b/source/components/gallery-banner/style.styl
@@ -62,9 +62,12 @@
     color #fff
     display flex
     align-items center
-    background-repeat no-repeat
-    background-position center
-    background-size cover
+    
+    &.i-show
+    
+      .b-impression-block__image,
+      .container
+        opacity 1
     
     @media (max-width: 1024px)
       text-align center
@@ -75,6 +78,24 @@
     
     p
       max-width 360px
+      
+    .container
+      opacity 0
+      transition( opacity 0.5s ease )
+      z-index 2
+      
+  &__image
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+    background-repeat no-repeat
+    background-position center
+    background-size cover
+    opacity 0
+    transition( opacity 0.5s ease )
+    z-index 1
       
   &__price
     font-size 13.5pt
@@ -96,7 +117,7 @@
     position relative
     top 0
     left 7px
-    border-radius 7px
+    border-radius 8px
     border 1px solid #fff
     
   .fotorama__nav--dots .fotorama__nav__frame
@@ -108,9 +129,12 @@
     
   .fotorama__arr
     background none
-    margin-top -45px
-    width 90px
-    height 90px
+    margin-top -60px
+    width 126px
+    height 126px
+      
+    &:hover:after
+      opacity 0.5
     
     &:after
       content ''
@@ -120,14 +144,22 @@
       width 90px
       height 90px
       position absolute
+      top 18px
+      transition( opacity 0.5s ease )
       
-    &.fotorama__arr--prev:after
-      transform (rotate( -135deg ))
-      left 46px
+    &.fotorama__arr--prev
+      margin-left 30px
       
-    &.fotorama__arr--next:after
-      transform (rotate( 45deg ))
-      right 46px
+      &:after
+        transform (rotate( -135deg ))
+        left 19px
+      
+    &.fotorama__arr--next
+      margin-right 30px
+      
+      &:after
+        transform (rotate( 45deg ))
+        right 19px
     
     @media (max-width: 520px)
       display none
