--- a/markup/components/gallery-banner/template.html
+++ b/markup/components/gallery-banner/template.html
@@ -5,25 +5,28 @@
 <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 <div class="b-impression-block">
-  <div data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" class="fotorama">
+  <div data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-arrows="true" class="fotorama">
     <div style="background-image: url(/components/gallery-banner/preloader.svg)" class="b-impression-block__frame">
-      <div style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/1.jpg);" class="b-impression-block__container">
+      <div class="b-impression-block__container">
+        <div data-image="http://s.fotorama.io/1.jpg" class="b-impression-block__image"></div>
         <div class="container">
           <h2 class="b-h1">Хевиз</h2>
           <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.<br/><b class="b-impression-block__price">от 480 €</b></p>
         </div>
       </div>
     </div>
-    <div style="position:relative;" class="b-impression-block__frame">
-      <div style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/2.jpg);" class="b-impression-block__container">
+    <div style="background-image: url(/components/gallery-banner/preloader.svg)" class="b-impression-block__frame">
+      <div class="b-impression-block__container">
+        <div data-image="http://s.fotorama.io/2.jpg" class="b-impression-block__image"></div>
         <div class="container">
           <h2 class="b-h1">Хевиз</h2>
           <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b></p>
         </div>
       </div>
     </div>
-    <div style="position:relative;" class="b-impression-block__frame">
-      <div style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/3.jpg);" class="b-impression-block__container">
+    <div style="background-image: url(/components/gallery-banner/preloader.svg)" class="b-impression-block__frame">
+      <div class="b-impression-block__container">
+        <div data-image="http://s.fotorama.io/3.jpg" class="b-impression-block__image"></div>
         <div class="container">
           <h2 class="b-h1">Венгрия</h2>
           <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.<br/><b class="b-impression-block__price">от 1 480 €</b></p>
