--- a/source/components/gallery-banner/template.jade
+++ b/source/components/gallery-banner/template.jade
@@ -8,25 +8,28 @@ script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js" )
 
 .b-impression-block
   
-  .fotorama( data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" )
+  .fotorama( data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-arrows="true" )
     div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
-      .b-impression-block__container( style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/1.jpg);" )
+      .b-impression-block__container
+        .b-impression-block__image( data-image="http://s.fotorama.io/1.jpg" )
         .container
           h2.b-h1 Хевиз
           p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.
             br
             b.b-impression-block__price от 480 €
       
-    div.b-impression-block__frame( style="position:relative;" )
-      .b-impression-block__container( style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/2.jpg);" )
+    div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
+      .b-impression-block__container
+        .b-impression-block__image( data-image="http://s.fotorama.io/2.jpg" )
         .container
           h2.b-h1 Хевиз
           p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.
             br
             b.b-impression-block__price от 1 480 €
       
-    div.b-impression-block__frame( style="position:relative;" )
-      .b-impression-block__container( style="position:absolute; top:0; left:0; background-image: url(http://s.fotorama.io/3.jpg);" )
+    div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
+      .b-impression-block__container
+        .b-impression-block__image( data-image="http://s.fotorama.io/3.jpg" )
         .container
           h2.b-h1 Венгрия
           p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро.
