--- a/source/components/gallery-banner/style.styl
+++ b/source/components/gallery-banner/style.styl
@@ -82,9 +82,11 @@
     .container
       opacity 0
       transition( opacity 0.5s ease )
+      pointer-events none
       z-index 2
       
   &__image
+    display block
     position absolute
     top 0
     left 0
