--- a/source/components/gallery-banner/template.jade
+++ b/source/components/gallery-banner/template.jade
@@ -8,10 +8,10 @@ script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js" )
 
 .b-impression-block
   
-  .fotorama( data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-arrows="true" )
+  .fotorama( data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-autoplay="2000" )
     div.b-impression-block__frame( style="background-image: url(/components/gallery-banner/preloader.svg)" )
       .b-impression-block__container
-        .b-impression-block__image( data-image="http://s.fotorama.io/1.jpg" )
+        a.b-impression-block__image( href="" data-image="http://s.fotorama.io/1.jpg" )
         .container
           h2.b-h1 Хевиз
           p Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.
