--- a/source/index.jade
+++ b/source/index.jade
@@ -8,7 +8,11 @@ block banner
 
 block content
 
-  hr.i-unstyled
+  hr.i-unstyled.i-size-L
+
+  include ./modules/line-menu/include
+
+  hr.i-unstyled.i-size-L
   
   include ./components/announcement.21/template
   include ./components/announcement.111/template
