--- a/source/tours/tour/index.jade
+++ b/source/tours/tour/index.jade
@@ -140,33 +140,21 @@ block content
           .col-sm-8.col-sm-offset-2 Название таблицы
       thead
         tr
-          th
-            Заголовок столбца 1
-          th
-            Заголовок столбца 2
-          th
-            Заголовок столбца 3
-          th
-            Заголовок столбца 4
+          th Заголовок столбца 1
+          th Заголовок столбца 2
+          th Заголовок столбца 3
+          th Заголовок столбца 4
       tbody
         tr
-          td
-            Пункт 1
-          td
-            Пункт 2
-          td
-            Пункт 3
-          td
-            Пункт 4
+          td Пункт 1
+          td Пункт 2
+          td Пункт 3
+          td Пункт 4
         tr
-          td
-            Пункт 1
-          td
-            Пункт 2
-          td
-            Пункт 3
-          td
-            Пункт 4
+          td Пункт 1
+          td Пункт 2
+          td Пункт 3
+          td Пункт 4
 
   hr.i-size-M.i-unstyled
 
@@ -186,17 +174,7 @@ block content
       p.xsmall.relative <span class="asterisk">*</span>По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться. По правилам чартерных перевозок авиакомпания, аэропорт и время вылета могут меняться.
       
   hr.i-size-L
-
-  .row
-    .col-sm-8.col-sm-offset-2
-      
-      .row
-        .col-sm-6
-          img( src="/upload/manager.jpg" ).img-responsive
-        .col-sm-6
-          h3 Хотите забронировать этот тур?
-          p Меня завут Анна Иванова, я помогу вам приобрести этот тур и оформлю все необходимые документы.
-          
-          a.btn.btn-large.btn-wide( href="" ) Отправить заявку
+  
+  include ../../modules/forms/question
 
   hr.i-size-M.i-unstyled
