--- a/source/components/gallery-banner/style.styl
+++ b/source/components/gallery-banner/style.styl
@@ -4,15 +4,15 @@
   0%
     background-color #3d7cc9
   10%
-    background-color #f759a3
+    background-color #bd3eb6
   20%
-    background-color #a874ef
+    background-color #f759a3
   30%
     background-color #4b5ae4
   40%
     background-color #4dd2c1
   50%
-    background-color #bd3eb6
+    background-color #a874ef
   60%
     background-color #0abe0a
   70%
@@ -33,6 +33,9 @@
     transform rotate(360deg)
 
 .b-impression-block
+
+  .fotorama
+    width 100%
 
   &__frame
     position relative
@@ -78,6 +81,11 @@
     
     p
       max-width 360px
+      
+      
+    p, .b-h1
+      @media (min-width: 1025px) and (max-width: 1525px)
+        margin-left 70px
       
     .container
       opacity 0
@@ -163,5 +171,5 @@
         transform (rotate( 45deg ))
         right 19px
     
-    @media (max-width: 520px)
-      display none
+    @media (max-width: 740px)
+      display none !important
