Announcement images and preloader rainbow

--- a/markup/components/announcement.21/template.html
+++ b/markup/components/announcement.21/template.html
@@ -2,22 +2,26 @@
 <!-- start /components/announcement.21/-->
 <div class="b-announcement-21 b-announcement">
   <div class="row">
-    <div style="background-image: url( '/upload/banner6.jpg' )" class="col-sm-8"><a href="/tours/tour/" class="b-announcement__text">
+    <div data-image="/upload/banner6.jpg" class="col-sm-8">
+      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Старушка Европа</div>
         <div class="b-announcement__title">Увидеть Париж</div>
         <div class="b-announcement__type">Прогулки по летнему Парижу</div>
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">76 900 руб.</span>
-        </div></a></div>
-    <div style="background-image: url( '/upload/banner5.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-announcement__text">
+        </div></a>
+    </div>
+    <div data-image="/upload/banner5.jpg" class="col-sm-4">
+      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Сказка</div>
         <div class="b-announcement__title">Северное сияние в Исландии</div>
         <div class="b-announcement__type">Туры с авиаперелетом</div>
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">466 800 руб.</span>
-        </div></a></div>
+        </div></a>
+    </div>
   </div>
 </div>
 <!-- end /components/announcement.21/-->
