--- a/markup/components/announcement.3/template.html
+++ b/markup/components/announcement.3/template.html
@@ -2,14 +2,16 @@
 <!-- start /components/announcement.3/-->
 <div class="b-announcement-3 b-announcement">
   <div class="row">
-    <div style="background-image: url( '/upload/banner1.jpg' )" class="col-sm-12"><a href="/tours/tour/" class="b-announcement__text">
+    <div data-image="/upload/banner1.jpg" class="col-sm-12">
+      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Старушка Европа</div>
         <div class="b-announcement__title">Увидеть Париж</div>
         <div class="b-announcement__type">Прогулки по летнему Парижу</div>
         <div class="b-announcement__price">
           от
            <span class="b-announcement__price__num">76 900 руб.</span>
-        </div></a></div>
+        </div></a>
+    </div>
   </div>
 </div>
 <!-- end /components/announcement.3/-->
