--- a/source/components/announcement.111/template.jade
+++ b/source/components/announcement.111/template.jade
@@ -3,7 +3,8 @@
 .b-announcement-111.b-announcement
   
   .row
-    .col-sm-4( style="background-image: url( '/upload/banner2.jpg' )" )
+    .col-sm-4( data-image="/upload/banner2.jpg" )
+      .b-announcement__image
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Южная америка
         .b-announcement__title Гаваи, Коста Рика, Куба
@@ -12,7 +13,8 @@
           | 
           span.b-announcement__price__num 266 800 руб.
           
-    .col-sm-4( style="background-image: url( '/upload/banner3.jpg' )" )
+    .col-sm-4( data-image="/upload/banner3.jpg" )
+      .b-announcement__image
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Горные лыжи
         .b-announcement__title Австрия
@@ -21,7 +23,8 @@
           | 
           span.b-announcement__price__num 106 800 руб.
           
-    .col-sm-4( style="background-image: url( '/upload/banner4.jpg' )" )
+    .col-sm-4( data-image="/upload/banner4.jpg" )
+      .b-announcement__image
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Северная америка
         .b-announcement__title Путешествие по Аризоне
