--- a/source/styl/announcement.styl
+++ b/source/styl/announcement.styl
@@ -1,3 +1,73 @@
+@keyframes impression-bg1
+  0%
+    background-color #ffd4f3
+  20%
+    background-color #b7baff
+  40%
+    background-color #b7ffc1
+  60%
+    background-color #fffeb7
+  80%
+    background-color #ffd8d4
+  100%
+    background-color #ffd4f3
+    
+@keyframes impression-bg2
+  0%
+    background-color #b7baff
+  20%
+    background-color #b7ffc1
+  40%
+    background-color #fffeb7
+  60%
+    background-color #ffd8d4
+  80%
+    background-color #ffd4f3
+  100%
+    background-color #b7baff
+    
+@keyframes impression-bg3
+  0%
+    background-color #b7ffc1
+  20%
+    background-color #fffeb7
+  40%
+    background-color #ffd8d4
+  60%
+    background-color #ffd4f3
+  80%
+    background-color #b7baff
+  100%
+    background-color #b7ffc1
+    
+@keyframes impression-bg4
+  0%
+    background-color #fffeb7
+  20%
+    background-color #ffd8d4
+  40%
+    background-color #ffd4f3
+  60%
+    background-color #b7baff
+  80%
+    background-color #b7ffc1
+  100%
+    background-color #fffeb7
+    
+@keyframes impression-bg5
+  0%
+    background-color #ffd8d4
+  20%
+    background-color #ffd4f3
+  40%
+    background-color #b7baff
+  60%
+    background-color #b7ffc1
+  80%
+    background-color #fffeb7
+  100%
+    background-color #ffd8d4
+
 .b-announcement
   clear both
   
@@ -9,14 +79,27 @@
   .col-sm-8,
   .col-sm-12
     padding-top 100%
-    background-color #aaa
-    background-repeat no-repeat
-    background-position center center
-    background-size cover
     margin-top -1px
     
     @media (min-width: 768px)
       padding-top 33.3%
+    
+  .col-sm-4
+    &:nth-of-type(1)
+      animation impression-bg1 15s linear infinite
+    &:nth-of-type(2)
+      animation impression-bg3 15s linear infinite
+    &:nth-of-type(3)
+      animation impression-bg5 15s linear infinite
+    
+  .col-sm-8
+    &:nth-of-type(1)
+      animation impression-bg2 15s linear infinite
+    &:nth-of-type(2)
+      animation impression-bg4 15s linear infinite
+    
+  .col-sm-12
+    animation impression-bg3 15s linear infinite
       
   .b-card-text
     position absolute
@@ -36,6 +119,30 @@
     text-decoration none
     
   .b-announcement
+      
+    &__image
+      display block
+      position absolute
+      top 0
+      left 0
+      width 100%
+      height 100%
+      background-repeat no-repeat
+      background-position center center
+      background-size cover
+      opacity 0
+      transition( opacity 0.5s ease )
+      z-index 1
+      
+      &.i-show
+        opacity 1
+      
+      &:before
+        content ''
+        display block
+        width 100%
+        height 100%
+        background-color rgba(51,51,51,0.3)
     
     &__text
       display block
@@ -46,6 +153,7 @@
       height 100%
       color #fff
       text-align center
+      z-index 2
       
     &__section
       padding 0 15px
