Tours components - rainbow preloader

--- a/markup/components/tours.111/template.html
+++ b/markup/components/tours.111/template.html
@@ -2,9 +2,15 @@
 <!-- start /components/tours.111/-->
 <div class="b-tours-111 b-tours">
   <div class="row">
-    <div style="background-image: url( '/upload/banner2.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
-    <div style="background-image: url( '/upload/banner3.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a></div>
-    <div style="background-image: url( '/upload/banner4.jpg' )" class="col-sm-4"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
+    <div data-image="/upload/banner2.jpg" class="col-sm-4">
+      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    </div>
+    <div data-image="/upload/banner3.jpg" class="col-sm-4">
+      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
+    </div>
+    <div data-image="/upload/banner4.jpg" class="col-sm-4">
+      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    </div>
   </div>
 </div>
 <!-- end /components/tours.111/-->
