--- a/markup/components/tours.3/template.html
+++ b/markup/components/tours.3/template.html
@@ -2,7 +2,9 @@
 <!-- start /components/tours.3/-->
 <div class="b-tours-3 b-tours">
   <div class="row">
-    <div style="background-image: url( '/upload/banner1.jpg' )" class="col-sm-12"><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a></div>
+    <div data-image="/upload/banner1.jpg" class="col-sm-12">
+      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    </div>
   </div>
 </div>
 <!-- end /components/tours.3/-->
