--- a/source/components/tours.111/template.jade
+++ b/source/components/tours.111/template.jade
@@ -3,13 +3,16 @@
 .b-tours-111.b-tours
   
   .row
-    .col-sm-4( style="background-image: url( '/upload/banner2.jpg' )" )
+    .col-sm-4( data-image="/upload/banner2.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
           
-    .col-sm-4( style="background-image: url( '/upload/banner3.jpg' )" )
+    .col-sm-4( data-image="/upload/banner3.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Недорогие туры в крым
           
-    .col-sm-4( style="background-image: url( '/upload/banner4.jpg' )" )
+    .col-sm-4( data-image="/upload/banner4.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
 
 // end /components/tours.111/
