--- a/source/components/tours.12/template.jade
+++ b/source/components/tours.12/template.jade
@@ -3,10 +3,12 @@
 .b-tours-12.b-tours
   
   .row
-    .col-sm-4( style="background-image: url( '/upload/banner3.jpg' )" )
+    .col-sm-4( data-image="/upload/banner3.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Недорогие туры в крым
           
-    .col-sm-8( style="background-image: url( '/upload/banner2.jpg' )" )
+    .col-sm-8( data-image="/upload/banner2.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
           
 // end /components/tours.12/
