--- a/source/components/tours.21/template.jade
+++ b/source/components/tours.21/template.jade
@@ -3,10 +3,12 @@
 .b-tours-21.b-tours
   
   .row
-    .col-sm-8( style="background-image: url( '/upload/banner6.jpg' )" )
+    .col-sm-8( data-image="/upload/banner6.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
           
-    .col-sm-4( style="background-image: url( '/upload/banner5.jpg' )" )
+    .col-sm-4( data-image="/upload/banner5.jpg" )
+      .b-tours__image
       a( href="/tours/tour/" ).b-card-text Недорогие туры в Крым
 
 // end /components/tours.21/
