Lazyload for tours and announcement components

--- a/markup/components/announcement.111/template.html
+++ b/markup/components/announcement.111/template.html
@@ -2,8 +2,8 @@
 <!-- start /components/announcement.111/-->
 <div class="b-announcement-111 b-announcement">
   <div class="row">
-    <div data-image="/upload/banner2.jpg" class="col-sm-4">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-4">
+      <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Южная америка</div>
         <div class="b-announcement__title">Гаваи, Коста Рика, Куба</div>
         <div class="b-announcement__type">Туры с авиаперелетом. Пляжный отдых</div>
@@ -12,8 +12,8 @@
            <span class="b-announcement__price__num">266 800 руб.</span>
         </div></a>
     </div>
-    <div data-image="/upload/banner3.jpg" class="col-sm-4">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-4">
+      <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Горные лыжи</div>
         <div class="b-announcement__title">Австрия</div>
         <div class="b-announcement__type">Туры на европейские горнолыжные курорты.</div>
@@ -22,8 +22,8 @@
            <span class="b-announcement__price__num">106 800 руб.</span>
         </div></a>
     </div>
-    <div data-image="/upload/banner4.jpg" class="col-sm-4">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-4">
+      <div data-original="/upload/banner4.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Северная америка</div>
         <div class="b-announcement__title">Путешествие по Аризоне</div>
         <div class="b-announcement__type">Туры с авиаперелетом</div>
