--- a/markup/components/announcement.12/template.html
+++ b/markup/components/announcement.12/template.html
@@ -2,8 +2,8 @@
 <!-- start /components/announcement.12/-->
 <div class="b-announcement-12 b-announcement">
   <div class="row">
-    <div data-image="/upload/banner3.jpg" class="col-sm-4">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-4">
+      <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Старушка Европа</div>
         <div class="b-announcement__title">Увидеть Париж</div>
         <div class="b-announcement__type">Прогулки по летнему Парижу</div>
@@ -12,8 +12,8 @@
            <span class="b-announcement__price__num">76 900 руб.</span>
         </div></a>
     </div>
-    <div data-image="/upload/banner2.jpg" class="col-sm-8">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-8">
+      <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Сказка</div>
         <div class="b-announcement__title">Северное сияние в Исландии</div>
         <div class="b-announcement__type">Туры с авиаперелетом</div>
