--- a/source/components/announcement.111/template.jade
+++ b/source/components/announcement.111/template.jade
@@ -3,8 +3,8 @@
 .b-announcement-111.b-announcement
   
   .row
-    .col-sm-4( data-image="/upload/banner2.jpg" )
-      .b-announcement__image
+    .col-sm-4
+      .b-announcement__image( data-original="/upload/banner2.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Южная америка
         .b-announcement__title Гаваи, Коста Рика, Куба
@@ -13,8 +13,8 @@
           | 
           span.b-announcement__price__num 266 800 руб.
           
-    .col-sm-4( data-image="/upload/banner3.jpg" )
-      .b-announcement__image
+    .col-sm-4
+      .b-announcement__image( data-original="/upload/banner3.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Горные лыжи
         .b-announcement__title Австрия
@@ -23,8 +23,8 @@
           | 
           span.b-announcement__price__num 106 800 руб.
           
-    .col-sm-4( data-image="/upload/banner4.jpg" )
-      .b-announcement__image
+    .col-sm-4
+      .b-announcement__image( data-original="/upload/banner4.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Северная америка
         .b-announcement__title Путешествие по Аризоне
