--- a/source/components/announcement.3/template.jade
+++ b/source/components/announcement.3/template.jade
@@ -3,8 +3,8 @@
 .b-announcement-3.b-announcement
   
   .row
-    .col-sm-12( data-image="/upload/banner1.jpg" )
-      .b-announcement__image
+    .col-sm-12
+      .b-announcement__image( data-original="/upload/banner1.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Старушка Европа
         .b-announcement__title Увидеть Париж
