--- a/source/styl/announcement.styl
+++ b/source/styl/announcement.styl
@@ -1,72 +1,92 @@
 @keyframes impression-bg1
   0%
-    background-color #ffd4f3
-  20%
-    background-color #b7baff
-  40%
-    background-color #b7ffc1
+    background-color #2021da
+  15%
+    background-color #3db1ed
+  30%
+    background-color #3bf062
+  45%
+    background-color #f6ff11
   60%
-    background-color #fffeb7
-  80%
-    background-color #ffd8d4
+    background-color #f83c3c
+  75%
+    background-color #ff40b0
+  90%
+    background-color #b540ff
   100%
-    background-color #ffd4f3
+    background-color #2021da
     
 @keyframes impression-bg2
   0%
-    background-color #b7baff
-  20%
-    background-color #b7ffc1
-  40%
-    background-color #fffeb7
+    background-color #3db1ed
+  15%
+    background-color #3bf062
+  30%
+    background-color #f6ff11
+  45%
+    background-color #f83c3c
   60%
-    background-color #ffd8d4
-  80%
-    background-color #ffd4f3
+    background-color #ff40b0
+  75%
+    background-color #b540ff
+  90%
+    background-color #2021da
   100%
-    background-color #b7baff
+    background-color #3db1ed
     
 @keyframes impression-bg3
   0%
-    background-color #b7ffc1
-  20%
-    background-color #fffeb7
-  40%
-    background-color #ffd8d4
+    background-color #3bf062
+  15%
+    background-color #f6ff11
+  30%
+    background-color #f83c3c
+  45%
+    background-color #ff40b0
   60%
-    background-color #ffd4f3
-  80%
-    background-color #b7baff
+    background-color #b540ff
+  75%
+    background-color #2021da
+  90%
+    background-color #3db1ed
   100%
-    background-color #b7ffc1
+    background-color #3bf062
     
 @keyframes impression-bg4
   0%
-    background-color #fffeb7
-  20%
-    background-color #ffd8d4
-  40%
-    background-color #ffd4f3
+    background-color #f6ff11
+  15%
+    background-color #f83c3c
+  30%
+    background-color #ff40b0
+  45%
+    background-color #b540ff
   60%
-    background-color #b7baff
-  80%
-    background-color #b7ffc1
+    background-color #2021da
+  75%
+    background-color #3db1ed
+  90%
+    background-color #3bf062
   100%
-    background-color #fffeb7
+    background-color #f6ff11
     
 @keyframes impression-bg5
   0%
-    background-color #ffd8d4
-  20%
-    background-color #ffd4f3
-  40%
-    background-color #b7baff
+    background-color #f83c3c
+  15%
+    background-color #ff40b0
+  30%
+    background-color #b540ff
+  45%
+    background-color #2021da
   60%
-    background-color #b7ffc1
-  80%
-    background-color #fffeb7
+    background-color #3db1ed
+  75%
+    background-color #3bf062
+  90%
+    background-color #f6ff11
   100%
-    background-color #ffd8d4
+    background-color #f83c3c
 
 .b-announcement
   clear both
@@ -130,7 +150,7 @@
       background-repeat no-repeat
       background-position center center
       background-size cover
-      opacity 0
+      //opacity 0
       transition( opacity 0.5s ease )
       z-index 1
       
