--- a/markup/components/announcement.3/template.html
+++ b/markup/components/announcement.3/template.html
@@ -2,8 +2,8 @@
 <!-- start /components/announcement.3/-->
 <div class="b-announcement-3 b-announcement">
   <div class="row">
-    <div data-image="/upload/banner1.jpg" class="col-sm-12">
-      <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+    <div class="col-sm-12">
+      <div data-original="/upload/banner1.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
         <div class="b-announcement__section">Старушка Европа</div>
         <div class="b-announcement__title">Увидеть Париж</div>
         <div class="b-announcement__type">Прогулки по летнему Парижу</div>
