--- a/markup/components/tours.12/template.html
+++ b/markup/components/tours.12/template.html
@@ -2,11 +2,11 @@
 <!-- start /components/tours.12/-->
 <div class="b-tours-12 b-tours">
   <div class="row">
-    <div data-image="/upload/banner3.jpg" class="col-sm-4">
-      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
+    <div class="col-sm-4">
+      <div data-original="/upload/banner3.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
     </div>
-    <div data-image="/upload/banner2.jpg" class="col-sm-8">
-      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    <div class="col-sm-8">
+      <div data-original="/upload/banner2.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
     </div>
   </div>
 </div>
