--- a/markup/components/tours.21/template.html
+++ b/markup/components/tours.21/template.html
@@ -2,11 +2,11 @@
 <!-- start /components/tours.21/-->
 <div class="b-tours-21 b-tours">
   <div class="row">
-    <div data-image="/upload/banner6.jpg" class="col-sm-8">
-      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    <div class="col-sm-8">
+      <div data-original="/upload/banner6.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
     </div>
-    <div data-image="/upload/banner5.jpg" class="col-sm-4">
-      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
+    <div class="col-sm-4">
+      <div data-original="/upload/banner5.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
     </div>
   </div>
 </div>
