--- a/markup/components/tours.3/template.html
+++ b/markup/components/tours.3/template.html
@@ -2,8 +2,8 @@
 <!-- start /components/tours.3/-->
 <div class="b-tours-3 b-tours">
   <div class="row">
-    <div data-image="/upload/banner1.jpg" class="col-sm-12">
-      <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+    <div class="col-sm-12">
+      <div data-original="/upload/banner1.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
     </div>
   </div>
 </div>
