--- a/source/components/announcement.12/template.jade
+++ b/source/components/announcement.12/template.jade
@@ -3,8 +3,8 @@
 .b-announcement-12.b-announcement
   
   .row
-    .col-sm-4( data-image="/upload/banner3.jpg" )
-      .b-announcement__image
+    .col-sm-4
+      .b-announcement__image( data-original="/upload/banner3.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Старушка Европа
         .b-announcement__title Увидеть Париж
@@ -13,8 +13,8 @@
           | 
           span.b-announcement__price__num 76 900 руб.
           
-    .col-sm-8( data-image="/upload/banner2.jpg" )
-      .b-announcement__image
+    .col-sm-8
+      .b-announcement__image( data-original="/upload/banner2.jpg" )
       a( href="/tours/tour/" ).b-announcement__text
         .b-announcement__section Сказка
         .b-announcement__title Северное сияние в Исландии
