--- a/source/components/tours.3/template.jade
+++ b/source/components/tours.3/template.jade
@@ -3,8 +3,8 @@
 .b-tours-3.b-tours
   
   .row
-    .col-sm-12( data-image="/upload/banner1.jpg" )
-      .b-tours__image
+    .col-sm-12
+      .b-tours__image( data-original="/upload/banner1.jpg" )
       a( href="/tours/tour/" ).b-card-text Экскурсионные туры в Европу
 
 // end /components/tours.3/
