--- a/source/styl/tours.styl
+++ b/source/styl/tours.styl
@@ -61,7 +61,7 @@
       background-repeat no-repeat
       background-position center center
       background-size cover
-      opacity 0
+      //opacity 0
       transition( opacity 0.5s ease )
       z-index 1
       
